[tool.poetry]
name = "experiments"
version = "0.1.0"
description = ""
authors = ["Harmouch101 <eng.mahmoudharmouch@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.1.17"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
